--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="flex items-center justify-center min-h-screen bg-gray-100">
     <h1 class="text-4xl font-bold text-blue-600">
-      Hello Tailwind + Vite!
+      Jigsaw Energy
     </h1>
   </body>
 </html>
