--- a/index.html
+++ b/index.html
@@ -33,27 +33,48 @@
       nav {
         background-color: rgba(0, 0, 0, 0.2); /* a translucent black overlay */
       }
+
+      .mobile-menu {
+        display: none;
+      }
+
+      @media (max-width: 768px) {
+        .desktop-menu {
+          display: none;
+        }
+        .mobile-menu {
+          display: block;
+        }
+        .mobile-menu-items {
+          display: none;
+        }
+        .mobile-menu-items.active {
+          display: block;
+        }
+      }
     </style>
   </head>
 
   <body class="text-white font-sans min-h-screen overflow-x-hidden">
     <!-- Navbar -->
-    <nav class="flex justify-between items-center px-10 py-6 shadow-lg backdrop-blur-sm">
+    <nav class="flex flex-wrap justify-between items-center px-4 md:px-10 py-4 md:py-6 shadow-lg backdrop-blur-sm">
       <div class="flex items-center space-x-3">
         <!-- Updated logo reference -->
         <img
           src="/public/assets/images/jigsaw.png"
           alt="Jigsaw Energy"
-          class="h-16 w-auto"
+          class="h-12 md:h-16 w-auto"
         />
         <!-- You can use gradient text for a nice effect or keep it a solid color -->
         <span
-          class="text-4xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-indigo-200 to-teal-200"
+          class="text-2xl md:text-4xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-indigo-200 to-teal-200"
         >
           Jigsaw Energy
         </span>
       </div>
-      <ul class="flex space-x-10 text-xl">
+
+      <!-- Desktop Menu -->
+      <ul class="hidden md:flex space-x-6 lg:space-x-10 text-lg lg:text-xl desktop-menu">
         <li>
           <a href="#" class="hover:text-teal-300 btn-transition"
             >Home</a
@@ -87,15 +108,34 @@
           >
         </li>
       </ul>
+
+      <!-- Mobile Menu Button -->
+      <button class="mobile-menu p-2 rounded-md hover:bg-gray-700/50" onclick="toggleMenu()">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
+
+      <!-- Mobile Menu Items -->
+      <div class="mobile-menu-items w-full md:hidden mt-4">
+        <ul class="flex flex-col space-y-4 text-lg">
+          <li><a href="#" class="block hover:text-teal-300 btn-transition">Home</a></li>
+          <li><a href="#about" class="block hover:text-teal-300 btn-transition">About</a></li>
+          <li><a href="#solution" class="block hover:text-teal-300 btn-transition">Solution</a></li>
+          <li><a href="#team" class="block hover:text-teal-300 btn-transition">Team</a></li>
+          <li><a href="#climatebase" class="block hover:text-teal-300 btn-transition">Climatebase Project</a></li>
+          <li><a href="#contact" class="block hover:text-teal-300 btn-transition">Contact</a></li>
+        </ul>
+      </div>
     </nav>
 
     <!-- Main Section -->
     <section class="grid md:grid-cols-3 h-[calc(100vh-88px)] shadow-lg">
       <!-- Left column with headline and call-to-action -->
       <div
-        class="col-span-1 flex flex-col justify-center px-10 bg-gradient-to-b from-[#1E1E2E] to-[#2B2B40]"
+        class="col-span-3 md:col-span-1 flex flex-col justify-center px-6 md:px-10 py-12 md:py-0 bg-gradient-to-b from-[#1E1E2E] to-[#2B2B40]"
       >
-        <h1 class="text-7xl font-light leading-tight">
+        <h1 class="text-4xl md:text-6xl lg:text-7xl font-light leading-tight">
           Sustainable
           <br />
           <!-- Use a greenish color closer to your logo’s green -->
@@ -103,15 +143,15 @@
             >Energy</span
           >
         </h1>
-        <p class="mt-6 text-lg text-gray-300">
+        <p class="mt-4 md:mt-6 text-base md:text-lg text-gray-300">
           Building a sustainable future through innovative energy
           solutions. Transforming how energy is generated, stored, and
           distributed to make clean energy accessible worldwide.
         </p>
         <a
           href="#contact"
-          class="mt-8 inline-block px-6 py-3 rounded-md shadow-md btn-transition
-                 bg-indigo-500 hover:bg-indigo-600 text-white"
+          class="mt-6 md:mt-8 inline-block px-6 py-3 rounded-md shadow-md btn-transition
+                 bg-indigo-500 hover:bg-indigo-600 text-white text-center"
         >
           Get Started
         </a>
@@ -127,7 +167,7 @@
 
       <!-- Right image with floating button -->
       <div
-        class="col-span-1 bg-cover bg-center relative flex items-end justify-end"
+        class="hidden md:block col-span-1 bg-cover bg-center relative flex items-end justify-end"
         style="
           background-image: url('https://images.unsplash.com/photo-1497435334941-8c899ee9e8e9');
         "
@@ -145,5 +185,11 @@
 
     <!-- Main JS -->
     <script type="module" src="/src/main.js"></script>
+    <script>
+      function toggleMenu() {
+        const mobileMenu = document.querySelector('.mobile-menu-items');
+        mobileMenu.classList.toggle('active');
+      }
+    </script>
   </body>
 </html>
