--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
             <!-- Add all other team members following the same pattern -->
         </div>
     </div>
-    <a href="/" class="fixed top-6 left-6 bg-white/10 backdrop-blur-sm p-3 rounded-lg hover:bg-white/20 transition-colors">
+    <a href="/jigsawenergy/" class="fixed top-6 left-6 bg-white/10 backdrop-blur-sm p-3 rounded-lg hover:bg-white/20 transition-colors">
         ← Back to Home
     </a>
 </body>
