--- a/index.html
+++ b/index.html
@@ -76,11 +76,8 @@
     <!-- Navbar -->
     <nav class="flex flex-wrap justify-between items-center px-4 md:px-10 py-4 md:py-6 shadow-lg backdrop-blur-sm">
       <div class="flex items-center space-x-3">
-        <img
-          src="/jigsawenergy/assets/jigsaw-OccScwCO.png"
-          alt="Jigsaw Energy"
-          class="h-12 md:h-16 w-auto"
-        />
+        <img src="./assets/images/jigsaw.png" alt="Jigsaw Energy" class="h-12 md:h-16 w-auto" />
+
         <span
           class="text-2xl md:text-4xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-indigo-200 to-teal-200"
         >
