--- a/index.html
+++ b/index.html
@@ -190,10 +190,34 @@
       </div>
     </section>
 
-    <div id="app"></div>
+    <!-- Contact Section -->
+    <section id="contact" class="py-20 px-6 md:px-10 bg-gradient-to-b from-[#2B2B40] to-[#1E1E2E]">
+      <div class="max-w-4xl mx-auto">
+        <h2 class="text-3xl md:text-5xl font-bold mb-8">Contact Us</h2>
+        <div class="bg-black/20 p-8 rounded-lg backdrop-blur-sm">
+          <form id="contact-form" class="space-y-6">
+            <div>
+              <label class="block mb-2">Name</label>
+              <input type="text" class="w-full p-2 rounded bg-white/10 border border-white/20" required>
+            </div>
+            <div>
+              <label class="block mb-2">Email</label>
+              <input type="email" class="w-full p-2 rounded bg-white/10 border border-white/20" required>
+            </div>
+            <div>
+              <label class="block mb-2">Message</label>
+              <textarea class="w-full p-2 rounded bg-white/10 border border-white/20 h-32" required></textarea>
+            </div>
+            <button type="submit" class="bg-indigo-500 hover:bg-indigo-600 px-6 py-3 rounded-md btn-transition">
+              Send Message
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
 
     <!-- Main JS -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
     <script>
       function toggleMenu() {
         const mobileMenu = document.querySelector('.mobile-menu-items');
