--- a/team.html
+++ b/team.html
@@ -6,38 +6,44 @@
     <title>Our Team - Jigsaw Energy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/style.css">
+    <style>
+      body {
+        font-family: "Montserrat", sans-serif;
+        background: linear-gradient(135deg, #4f46e5, #10b981);
+      }
+      nav { background-color: rgba(0, 0, 0, 0.2); }
+      .btn-transition { transition: all 0.3s ease; }
+    </style>
 </head>
-<body class="bg-gradient-to-br from-indigo-600 to-teal-500 min-h-screen text-white">
-    <div class="container mx-auto px-4 py-16">
-        <h1 class="text-4xl font-bold mb-12 text-center">Our Team</h1>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
-            <div class="bg-white/10 backdrop-blur-sm p-6 rounded-lg shadow-xl hover:shadow-2xl transition-shadow">
-                <a href="https://linkedin.com" target="_blank" class="block">
-                    <div class="w-full aspect-square bg-gray-200/20 rounded-lg mb-4"></div>
-                    <h3 class="text-xl font-semibold mb-1">Anu Jayasinghe</h3>
-                </a>
-            </div>
-            
-            <div class="bg-white/10 backdrop-blur-sm p-6 rounded-lg shadow-xl hover:shadow-2xl transition-shadow">
-                <a href="https://linkedin.com" target="_blank" class="block">
-                    <div class="w-full aspect-square bg-gray-200/20 rounded-lg mb-4"></div>
-                    <h3 class="text-xl font-semibold mb-1">Diego Cerda</h3>
-                </a>
-            </div>
+<body class="text-white font-sans min-h-screen">
+    <nav class="flex justify-between items-center px-10 py-6 shadow-lg backdrop-blur-sm">
+      <div class="flex items-center space-x-3">
+        <img src="./assets/images/jigsaw.png" alt="Jigsaw Energy" class="h-16 w-auto" />
+        <span class="text-4xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-indigo-200 to-teal-200">
+          Jigsaw Energy
+        </span>
+      </div>
+      <ul class="flex space-x-10 text-xl">
+        <li><a href="index.html" class="hover:text-teal-300 btn-transition">Home</a></li>
+        <li><a href="climatebase.html" class="hover:text-teal-300 btn-transition">Climatebase Project</a></li>
+      </ul>
+    </nav>
 
-            <div class="bg-white/10 backdrop-blur-sm p-6 rounded-lg shadow-xl hover:shadow-2xl transition-shadow">
-                <a href="https://linkedin.com" target="_blank" class="block">
-                    <div class="w-full aspect-square bg-gray-200/20 rounded-lg mb-4"></div>
-                    <h3 class="text-xl font-semibold mb-1">Ev Macker</h3>
-                </a>
-            </div>
-
-            <!-- Add all other team members following the same pattern -->
+    <section class="py-20 px-10">
+      <div class="max-w-6xl mx-auto">
+        <h1 class="text-5xl font-bold mb-16 text-center">Our Team</h1>
+        <div class="grid md:grid-cols-3 gap-12">
+          <div class="bg-black/20 p-8 rounded-lg backdrop-blur-sm text-center">
+            <img src="https://via.placeholder.com/150" alt="Team Member" class="w-32 h-32 rounded-full mx-auto mb-4"/>
+            <h2 class="text-2xl font-bold mb-2">John Doe</h2>
+            <p class="text-teal-300 mb-4">Founder & CEO</p>
+            <p class="text-gray-300">Experienced in renewable energy and software development.</p>
+          </div>
+          <!-- Add more team members as needed -->
         </div>
-    </div>
-    <a href="/jigsawenergy/" class="fixed top-6 left-6 bg-white/10 backdrop-blur-sm p-3 rounded-lg hover:bg-white/20 transition-colors">
-        ← Back to Home
-    </a>
+      </div>
+    </section>
+
+    <script type="module" src="./src/team.js"></script>
 </body>
 </html>
